--- a/styles/test/Spacing.yml
+++ b/styles/test/Spacing.yml
@@ -5,5 +5,8 @@ link: https://docs.microsoft.com/en-us/style-guide/punctuation/periods
 level: error
 nonword: true
 tokens:
-  - '[a-z][.?!] {2,}[A-Z]'
-  - '[a-z][.?!][A-Z]'
+  - '[a-z]\s{2,}[a-z]' # ensure only one space between words
+  - '[a-z][.?!] {2,}[A-Z]' # one space between sentences (end.  new)
+  - '[a-z][.?!][A-Z]' #(end.new)
+  - '[,.?]\s{2,}[a-z]' #only one space after ,.?
+  
